feat: added vim-faux app to docker compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,3 +33,9 @@ services:
       - .env
     ports:
       - "${API_EXTERNAL_PORT}:5000"
+  faux-vim:
+    build:
+      context: .
+      dockerfile: faux-vim/Dockerfile
+    ports:
+      - "5001:8080"
